# ProjectiveGeometry23

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
ProjectiveGeometry23/: __init__.py  central_projection.py  estimation.py  homography.py  pluecker.py  source_detector_geometry.py  svg_utils.py  utils.py
tests/: test_basic.py
